# elastic_index_migrate

./: README.md
elastic_index_migrate/: Cargo.toml
elastic_index_migrate/src/: common.rs  main.rs
elastic_index_migrate/src/controller/: main_controller.rs
elastic_index_migrate/src/service/: es_service.rs  mod.rs  re_index.rs
elastic_index_migrate/src/utils_modules/: logger_utils.rs
